Registration login design (#15)
* login

Co-authored-by: jkuskys <j.kuskys1@gmail.com>
Co-authored-by: JKuskys <48916581+JKuskys@users.noreply.github.com>

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,7 @@
 
+<mat-toolbar color="primary"
+    ><i class="material-icons mr-1"> school </i>IT Academy
+    <div class="spacer"></div>
+    <button mat-raised-button (click)="openDialog()">Prisijungti</button>
+</mat-toolbar>
 
-
-<nav class="navbar navbar-dark header">
-  <div class="container-fluid">
-  <div class="navbar-header">
-    <a class="navbar-brand" href="#">
-    IT Akademija
-    </a>
-  </div>
-  <ul class="nav navbar-nav navbar-right">
-    <div>
-    <button (click)="openModal('login')" type="button" class="menu-button btn">Prisijungti</button></div>
-  </ul>
-  </div>
-</nav>
