--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,6 +11,7 @@
       IT. Akademijos studentai turi galimybę pasirinkti norimą stažuotės kryptį kurso pabaigoje ir dirbti
       su realiais IT projektais.
     </div>
+
     <div class="content-container">
       <div class="column content content-left">
         <div class="container-text">
@@ -37,23 +38,20 @@
             <li>Skirsi pusę darbo dienos (14-18 val.) teorinėms ir praktinėms užduotims;</li>
             <li>Puikiai kalbi ir rašai angliškai.</li>
           </ul>
+
         </div>
 
       </div>
     </div>
     <div class="d-flex justify-content-center container-button">
-      <button (click)="openModal('registration')" class="btn-rounded float-center">
+      <button (click)="openDialog()" class="btn-rounded float-center">
         Registruotis
       </button>
     </div>
   </div>
 </div>
-<jw-modal id="registration">
-  <app-registration></app-registration>
-</jw-modal>
+
 <jw-modal id="successfulRegistration">
   <app-successful-registration></app-successful-registration>
 </jw-modal>
-<jw-modal id="login">
-  <app-login></app-login>
-</jw-modal>
+
