--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,29 +1,137 @@
-//for textareas
-.scroll::-webkit-scrollbar {
-    display: none;
-  }
-  .resize {
-    resize:none
-  }
-  //to add padding to all blocks of input
-  .container-uncolored{
-    margin: auto;
-    max-width: 400px;
-    min-width: 300px;
-    padding: 10px;
-    background: rgba(235, 239, 242, 0);
-    border-radius: 5px;
-  }
-  //to show items in one line(phone number)
-  .inline{
-    display : inline;
-  }
+// //for textareas
+// .scroll::-webkit-scrollbar {
+//     display: none;
+//   }
+//   .resize {
+//     resize:none
+//   }
+//   //to add padding to all blocks of input
+//   .container-uncolored{
+//     margin: auto;
+//     max-width: 400px;
+//     min-width: 300px;
+//     padding: 20px;
+//     background: rgba(235, 239, 242, 0);
+//     border-radius: 1px;
+//   }
+//   //to show items in one line(phone number)
+//   .inline{
+//     display : inline;
+//   }
 
-.container-login-colored{
-  margin: auto;
-  max-width: 450px;
-  min-width: 400px;
-  padding: 25px;
-  background: rgba(15, 213, 242, 0.9);
-  border-radius: 25px;
+// .container-login-colored{
+//   margin: auto;
+//   max-width: 450px;
+//   min-width: 400px;
+//   padding: 25px;
+//   background: rgba(15, 213, 242, 0.9);
+//   border-radius: 25px;
+// }
+html,
+body {
+    height: 400px;
+    width: 400px;
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-image: url(https://lh4.googleusercontent.com/-XplyTa1Za-I/VMSgIyAYkHI/AAAAAAAADxM/oL-rD6VP4ts/w1184-h666/Android-Lollipop-wallpapers-Google-Now-Wallpaper-2.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 400px;
+    width: 400px;
+    font-family: "Roboto", sans-serif;
+    
+}
+.app-header {
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+}
+.login-wrapper {
+    min-height: 300px;
+    width: 400px;
+}
+.positronx {
+    text-decoration: none;
+    color: #ffffff;
+}
+.box {
+    position: relative;
+    top: 0;
+    opacity: 1;
+    float: left;
+    padding: 60px 50px 40px 50px;
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    z-index: 5;
+    max-width: 330px;
+}
+.box.back {
+    transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    top: -20px;
+    opacity: 0.8;
+    z-index: -1;
+}
+.box:before {
+    content: "";
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: -10px;
+    background: rgba(255, 255, 255, 0.6);
+    left: 0;
+    transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    z-index: -1;
+}
+.login-wrapper .example-form {
+    min-width: 100%;
+    max-width: 300px;
+    width: 100%;
+}
+.login-wrapper .example-full-width,
+.login-wrapper .btn-block {
+    width: 100%;
+}
+.login-wrapper mat-card-header {
+    text-align: center;
+    width: 100%;
+    display: block;
+    font-weight: 700;
+}
+.login-wrapper mat-card-header mat-card-title {
+    font-size: 30px;
+    margin: 0;
+}
+.login-wrapper .mat-card {
+    padding: 40px 70px 50px;
+}
+.login-wrapper .mat-stroked-button {
+    border: 1px solid currentColor;
+    line-height: 54px;
+    background: #fff7fa;
+}
+.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
+    padding: 0.8375em 0;
+}
+.exit{
+    outline: none;
+}
+.exit-size{
+    width:200%;
+    height:200%
 }
