registraion bug fix+scrollbar

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -281,6 +281,7 @@
                 </div>
             </div>
             <span class="align-bottom">
+              <p>{{this.serverErrorMessage}}</p>
                 <button
                     mat-stroked-button
                     color="primary"
