--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,64 +1,61 @@
-
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-    <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('login')">
-        <span aria-hidden="true">&times;</span>
-    </button>
-    <mat-card-header>
-        <h1 class="text-center">Prisijungimas</h1>
-    </mat-card-header>
-
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <mat-card-content>
-            <mat-form-field class="example-full-width">
-                <input
-                    matInput
-                    placeholder="El. paštas"
-                    type="emailLogin"
-                    class="form-control"
-                    id="emailLogin"
-                    formControlName="emailLogin"
-                />
-            </mat-form-field>
-            <div
-                [hidden]="loginForm.controls.emailLogin.valid || loginForm.controls.emailLogin.pristine"
-                class="alert alert-danger"
-            >
-                <div *ngIf="loginForm.controls.emailLogin.errors?.required">
-                    Elektroninis paštas yra privalomas
-                </div>
-                <div *ngIf="loginForm.controls.emailLogin.errors?.pattern">
-                    Neteisingas elektroninis parašas
-                </div>
-            </div>
-            <mat-form-field class="example-full-width">
-                <input
-                    matInput
-                    placeholder="Slaptažodis"
-                    type="password"
-                    class="form-control"
-                    formControlName="passwordLogin"
-                />
-            </mat-form-field>
-            <div
-                [hidden]="loginForm.controls.passwordLogin.valid || loginForm.controls.passwordLogin.pristine"
-                class="alert alert-danger"
-            >
-                <div *ngIf="loginForm.controls.passwordLogin.errors?.required">
-                    Slaptažodis yra privalomas
-                </div>
-            </div>
-        </mat-card-content>
-        <span class="align-bottom">
+  <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('login')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <mat-card-header>
+    <h1 class="text-center">Prisijungimas</h1>
+  </mat-card-header>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <mat-card-content>
+      <mat-form-field class="example-full-width">
+        <input
+          matInput
+          placeholder="El. paštas"
+          type="emailLogin"
+          class="form-control"
+          id="emailLogin"
+          formControlName="emailLogin"
+        />
+      </mat-form-field>
+      <div
+        [hidden]="loginForm.controls.emailLogin.valid || loginForm.controls.emailLogin.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="loginForm.controls.emailLogin.errors?.required">
+          Elektroninis paštas yra privalomas
+        </div>
+        <div *ngIf="loginForm.controls.emailLogin.errors?.pattern">
+          Neteisingas elektroninis parašas
+        </div>
+      </div>
+      <mat-form-field class="example-full-width">
+        <input
+          matInput
+          placeholder="Slaptažodis"
+          type="password"
+          class="form-control"
+          formControlName="passwordLogin"
+        />
+      </mat-form-field>
+      <div
+        [hidden]="loginForm.controls.passwordLogin.valid || loginForm.controls.passwordLogin.pristine"
+        class="alert alert-danger">
+        <div *ngIf="loginForm.controls.passwordLogin.errors?.required">
+          Slaptažodis yra privalomas
+        </div>
+      </div>
+    </mat-card-content>
+    <span class="align-bottom">
+           <p>{{this.serverErrorMessage}}</p>
             <button
-                mat-stroked-button
-                color="primary"
-                type="submit"
-                class="btn-block mt-10"
-                [disabled]="!loginForm.valid"
+              mat-stroked-button
+              color="primary"
+              type="submit"
+              class="btn-block mt-10"
+              [disabled]="!loginForm.valid"
             >
                 Prisijungti
-            </button></span
-        >
-
-    </form>
+            </button>
+        </span>
+  </form>
 </div>
