making header adjustments

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
 
-<mat-toolbar color="primary"
-    ><i class="material-icons mr-1"> school </i>IT Academy
+<mat-toolbar class="header"><i class="material-icons mr-1"> school </i><a href="#">IT Academy</a>
     <div class="spacer"></div>
-    <button mat-raised-button (click)="openDialog()">Prisijungti</button>
+    <button mat-raised-button (click)="openDialog()" class="menu-button">Prisijungti</button>
 </mat-toolbar>
 
