--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,6 +6,14 @@
 .header{
   min-height:5vh;
   background: #6486C4;
+  color: white;
+  font-family: 'Nunito', sans-serif;
+  font-size: 22px;
+}
+
+.header a{
+  color: white;
+  text-decoration: none;
 }
 
 .vertical-center {
@@ -44,6 +52,8 @@
   .menu-button{
     background: #6486C4;
     color: white;
+    box-shadow: none;
+    font-size: 18px;
   }
 
 .spacer{
