making registration form responsive

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,6 +1,6 @@
 
 <mat-dialog-content>
-    <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+    <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center" id="red-form">
         <mat-card-header>
             <h1 class="text-center">Registracija</h1>
         </mat-card-header>
