--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -1,3 +1,5 @@
+
+
 //for textareas
 .scroll::-webkit-scrollbar {
     display: none;
@@ -8,9 +10,7 @@
 //to add padding to all blocks of input
 .container-uncolored {
     margin: auto;
-    max-width: 800px;
-    min-width: 300px;
-    padding: 10px;
+    max-width: 100%;
     background: rgba(235, 239, 242, 0);
     border-radius: 5px;
 }
@@ -52,10 +52,51 @@ body {
     z-index: 2;
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
-.login-wrapper {
-    min-height: 300px;
-    width: 600px;
+
+@media only screen and (max-width: 1000px){
+  .login-wrapper {
+    min-height: 50vh;
+    width: 100%;
+  }
+
+  .login-wrapper .example-form {
+    min-width: 100%;
+    max-width: 100vw;
+    width: 100%;
+  }
+
+
+
+  #sel1{
+    width: 100%;
+    padding: 0;
+    margin:0;
+  }
+
+  #sel1 .col-md-3{
+     max-width: 50%;
+    padding:0;
+   }
+  #sel1 .col-md-9{
+    max-width: 50%;
+    padding:0;
+  }
 }
+
+@media only screen and (min-width: 1001px){
+  .login-wrapper {
+    min-height: 50vh;
+    width: 50vw;
+  }
+
+  .login-wrapper .example-form {
+    min-width: 100%;
+    max-width: 50vw;
+    width: 100%;
+  }
+}
+
+
 .positronx {
     text-decoration: none;
     color: #ffffff;
@@ -97,11 +138,7 @@ body {
     -ms-transform: scale(0.95);
     z-index: -1;
 }
-.login-wrapper .example-form {
-    min-width: 100%;
-    max-width: 300px;
-    width: 100%;
-}
+
 .login-wrapper .example-full-width,
 .login-wrapper .btn-block {
     width: 100%;
@@ -134,3 +171,26 @@ body {
 .mat-radio-button ~ .mat-radio-button {
     margin-left: 10px
   }
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 2px;
+  border-radius: 5px;
+  background: #5A7BB6;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(255, 0, 0, 0);
+}
