--- a/src/app/successful-registration/successful-registration.component.html
+++ b/src/app/successful-registration/successful-registration.component.html
@@ -1,5 +1,6 @@
-<div class="container-succ-colored">
-  <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('successfulRegistration')"><span
+<mat-dialog-content>
+  <button type="button" class="close float-right" aria-label="Close"
+          (click)="closeDialog()"><span
     aria-hidden="true">&times;</span></button>
   <div class="container-uncolored">
     <div class="text-center">
@@ -9,4 +10,4 @@
       <p>Norint peržiūrėti savo paraišką, prisijunkite</p>
     </div>
   </div>
-</div>
+</mat-dialog-content>
