--- a/src/app/successful-registration/successful-registration.component.scss
+++ b/src/app/successful-registration/successful-registration.component.scss
@@ -1,8 +1,8 @@
 .container-uncolored{
   margin: auto;
-  max-width: 350px;
-  min-width: 300px;
-  padding: 10px;
+  max-width: 100%;
+  min-width: 100%;
+  padding: 10%;
   background: rgba(235, 239, 242, 0);
   border-radius: 5px;
 }
