--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -42,7 +42,7 @@ body {
     height: 400px;
     width: 400px;
     font-family: "Roboto", sans-serif;
-    
+
 }
 .app-header {
     justify-content: space-between;
@@ -54,8 +54,8 @@ body {
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 .login-wrapper {
-    min-height: 300px;
-    width: 400px;
+    height: 100%;
+    width: 100%;
 }
 .positronx {
     text-decoration: none;
