--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
           Elektroninis paštas yra privalomas
         </div>
         <div *ngIf="loginForm.controls.emailLogin.errors?.pattern">
-          Neteisingas elektroninis parašas
+          Neteisingas elektroninis paštas
         </div>
       </div>
       <mat-form-field class="example-full-width">
