--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -248,7 +248,8 @@
                 <input matInput type="password" id="password1" class="form-control" formControlName="passwordReg" />
             </div>
             <div
-                [hidden]="registrationForm.controls.passwordReg.valid || registrationForm.controls.passwordReg.pristine"
+                [hidden]="(registrationForm.controls.passwordReg.valid
+                || registrationForm.controls.passwordReg.pristine)&&(this.passwordRepeatReg.value === ''||this.passwordReg.value !== '')"
                 class="alert alert-danger"
             >
                 <div *ngIf="registrationForm.controls.passwordReg.errors?.required">
@@ -272,20 +273,8 @@
                 />
             </div>
             <div
-                [hidden]="
-                    (registrationForm.controls.passwordRepeatReg.valid ||
-                        registrationForm.controls.passwordRepeatReg.pristine) &&
-                    validatePasswords()
-                "
-                class="alert alert-danger"
-            >
-                <div *ngIf="registrationForm.controls.passwordRepeatReg.errors?.required">
-                    Šis laukas yra privalomas
-                </div>
-
-                <div *ngIf="registrationForm.controls.passwordRepeatReg.errors?.maxlength">
-                    Slaptažodis privalo būti trumpesnis nei 30 symbolių
-                </div>
+                [hidden]="validatePasswords()"
+                class="alert alert-danger">
                 <div *ngIf="this.passwordReg.value != this.passwordRepeatReg.value">
                     Slaptažodžiai turi sutapti
                 </div>
