--- a/src/app/successful-registration/successful-registration.component.html
+++ b/src/app/successful-registration/successful-registration.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-  <button type="button" class="close float-right" aria-label="Close"
+  <button type="button" class="close float-right exit" aria-label="Close"
           (click)="closeDialog()"><span
     aria-hidden="true">&times;</span></button>
   <div class="container-uncolored">
