--- a/src/app/successful-registration/successful-registration.component.scss
+++ b/src/app/successful-registration/successful-registration.component.scss
@@ -19,3 +19,11 @@
   background: rgba(0, 242, 123, 0.9);
   border-radius: 25px;
 }
+.close {
+  font-size: 35px;
+  bottom: 3px;
+  position: relative;
+}
+.exit {
+  outline: none;
+}
