--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center container-button">
-      <button (click)="openDialog()" class="btn-rounded float-center">
+      <button (click)="openDialog()" class="btn-rounded float-center button2">
         Registruotis
       </button>
     </div>
