--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,32 +1,3 @@
-// //for textareas
-// .scroll::-webkit-scrollbar {
-//     display: none;
-//   }
-//   .resize {
-//     resize:none
-//   }
-//   //to add padding to all blocks of input
-//   .container-uncolored{
-//     margin: auto;
-//     max-width: 400px;
-//     min-width: 300px;
-//     padding: 20px;
-//     background: rgba(235, 239, 242, 0);
-//     border-radius: 1px;
-//   }
-//   //to show items in one line(phone number)
-//   .inline{
-//     display : inline;
-//   }
-
-// .container-login-colored{
-//   margin: auto;
-//   max-width: 450px;
-//   min-width: 400px;
-//   padding: 25px;
-//   background: rgba(15, 213, 242, 0.9);
-//   border-radius: 25px;
-// }
 html,
 body {
     height: 400px;
@@ -54,8 +25,8 @@ body {
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 .login-wrapper {
-    height: 100%;
-    width: 100%;
+    min-height: 300px;
+    min-width: 450px;
 }
 .positronx {
     text-decoration: none;
@@ -128,13 +99,18 @@ body {
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
     padding: 0.8375em 0;
 }
-.exit{
+.close {
+    font-size: 35px;
+    bottom: 3px;
+    position: relative;
+  }
+  .exit {
     outline: none;
+  }
+  
+input.mat-input-element {
+  border: 1px solid #6486c4;
 }
-.exit-size{
-    width:200%;
-    height:200%
-}
-.close{
-    font-size: 50px;
+.form-control {
+  border: 1px solid #6486c4;
 }
