--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -1,169 +1,171 @@
+
+
+//for textareas
 .scroll::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 .resize {
-  resize: none;
+    resize: none;
 }
 //to add padding to all blocks of input
 .container-uncolored {
-  margin: auto;
-  max-width: 100%;
-  background: rgba(235, 239, 242, 0);
-  border-radius: 5px;
+    margin: auto;
+    max-width: 100%;
+    background: rgba(235, 239, 242, 0);
+    border-radius: 5px;
 }
 //to show items in one line(phone number)
 .inline {
-  display: inline;
+    display: inline;
 }
 
 .container-reg-colored {
-  margin: auto;
-  max-width: 850px;
-  min-width: 400px;
-  padding: 25px;
-  background: rgba(0, 222, 242, 0.9);
-  border-radius: 25px;
+    margin: auto;
+    max-width: 850px;
+    min-width: 400px;
+    padding: 25px;
+    background: rgba(0, 222, 242, 0.9);
+    border-radius: 25px;
 }
 html,
 body {
-  height: 400px;
-  width: 400px;
-  margin: 0;
-  padding: 0;
+    height: 700px;
+    width: 400px;
+    margin: 0;
+    padding: 0;
 }
 body {
-  background-image: url(https://lh4.googleusercontent.com/-XplyTa1Za-I/VMSgIyAYkHI/AAAAAAAADxM/oL-rD6VP4ts/w1184-h666/Android-Lollipop-wallpapers-Google-Now-Wallpaper-2.png);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 400px;
-  width: 400px;
-  font-family: "Roboto", sans-serif;
+    background-image: url(https://lh4.googleusercontent.com/-XplyTa1Za-I/VMSgIyAYkHI/AAAAAAAADxM/oL-rD6VP4ts/w1184-h666/Android-Lollipop-wallpapers-Google-Now-Wallpaper-2.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 700px;
+    width: 400px;
+    font-family: "Roboto", sans-serif;
 }
 .app-header {
-  justify-content: space-between;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px){
   .login-wrapper {
-      min-height: 50vh;
-      width: 100%;
+    min-height: 70vh;
+    width: 100%;
   }
 
   .login-wrapper .example-form {
-      min-width: 100%;
-      max-width: 100vw;
-      width: 100%;
+    min-width: 100%;
+    max-width: 100vw;
+    width: 100%;
   }
 
-  #sel1 {
-      width: 100%;
-      padding: 0;
-      margin: 0;
+
+
+  #sel1{
+    width: 100%;
+    padding: 0;
+    margin:0;
   }
 
-  #sel1 .col-md-3 {
-      max-width: 50%;
-      padding: 0;
-  }
-  #sel1 .col-md-9 {
-      max-width: 50%;
-      padding: 0;
+  #sel1 .col-md-3{
+     max-width: 50%;
+    padding:0;
+   }
+  #sel1 .col-md-9{
+    max-width: 50%;
+    padding:0;
   }
 }
 
-@media only screen and (min-width: 1001px) {
+@media only screen and (min-width: 1001px){
   .login-wrapper {
-      min-height: 50vh;
-      width: 50vw;
-  }
-
-  .login-wrapper .example-form {
-      min-width: 100%;
-      max-width: 50vw;
-      width: 100%;
+    max-height: 80vh; 
+    width: 38vw;
   }
 }
+
 
 .positronx {
-  text-decoration: none;
-  color: #ffffff;
+    text-decoration: none;
+    color: #ffffff;
 }
 .box {
-  position: relative;
-  top: 0;
-  opacity: 1;
-  float: left;
-  padding: 60px 50px 40px 50px;
-  width: 100%;
-  background: #fff;
-  border-radius: 10px;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  z-index: 5;
-  max-width: 330px;
+    position: relative;
+    top: 0;
+    opacity: 1;
+    float: left;
+    padding: 60px 50px 40px 50px;
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    z-index: 5;
+    max-width: 330px;
 }
 .box.back {
-  transform: scale(0.95);
-  -webkit-transform: scale(0.95);
-  -ms-transform: scale(0.95);
-  top: -20px;
-  opacity: 0.8;
-  z-index: -1;
+    transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    top: -20px;
+    opacity: 0.8;
+    z-index: -1;
 }
 .box:before {
-  content: "";
-  width: 100%;
-  height: 30px;
-  border-radius: 10px;
-  position: absolute;
-  top: -10px;
-  background: rgba(255, 255, 255, 0.6);
-  left: 0;
-  transform: scale(0.95);
-  -webkit-transform: scale(0.95);
-  -ms-transform: scale(0.95);
-  z-index: -1;
+    content: "";
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: -10px;
+    background: rgba(255, 255, 255, 0.6);
+    left: 0;
+    transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    z-index: -1;
 }
 
 .login-wrapper .example-full-width,
-.login-wrapper .btn-block .divas {
-  width: 100%;
+.login-wrapper .btn-block .divas{
+    width: 70%;
+    height: 100%;
 }
 .login-wrapper mat-card-header {
-  text-align: center;
-  width: 100%;
-  display: block;
-  font-weight: 700;
+    text-align: center;
+    width: 100%;
+    display: block;
+    font-weight: 700;
 }
 .login-wrapper mat-card-header mat-card-title {
-  font-size: 30px;
-  margin: 0;
+    font-size: 30px;
+    margin: 0;
 }
 .login-wrapper .mat-card {
-  padding: 40px 70px 50px;
+    padding: 40px 70px 50px;
 }
 .login-wrapper .mat-stroked-button {
-  line-height: 54px;
-  background: #fff7fa;
+    border: 1px solid currentColor;
+    line-height: 54px;
+    background: #fff7fa;
 }
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
-  padding: 0.8375em 0;
+    padding: 0.8375em 0;
 }
-.text-area {
-  width: 100px;
-  height: 100px;
+.text-area{
+    width:100px;
+    height:100px;
 }
 .mat-radio-button ~ .mat-radio-button {
-  margin-left: 10px;
-}
+    margin-left: 10px
+  }
 /* Let's get this party started */
 ::-webkit-scrollbar {
   width: 12px;
@@ -180,7 +182,7 @@ body {
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 2px;
   border-radius: 5px;
-  background: #5a7bb6;
+  background: #5A7BB6;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
@@ -203,4 +205,11 @@ input.mat-input-element {
 }
 .form-control {
   border: 1px solid #6486c4;
+}
+.mat-dialog-container{
+  max-height:700px;
+
+}
+#dialog{
+  min-height:83vh
 }
