--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -251,7 +251,8 @@
                 <input matInput type="password" id="password1" class="form-control" formControlName="passwordReg" />
             </div>
             <div
-                [hidden]="registrationForm.controls.passwordReg.valid || registrationForm.controls.passwordReg.pristine"
+                [hidden]="(registrationForm.controls.passwordReg.valid
+                || registrationForm.controls.passwordReg.pristine)&&(this.passwordRepeatReg.value === ''||this.passwordReg.value !== '')"
                 class="alert alert-danger"
             >
                 <div *ngIf="registrationForm.controls.passwordReg.errors?.required">
@@ -275,20 +276,9 @@
                 />
             </div>
             <div
-                [hidden]="
-                    (registrationForm.controls.passwordRepeatReg.valid ||
-                        registrationForm.controls.passwordReg.pristine) &&
-                    validatePasswords()
-                "
-                class="alert alert-danger"
-            >
-                <div *ngIf="registrationForm.controls.passwordRepeatReg.errors?.required">
-                    Šis laukas yra privalomas
-                </div>
+                [hidden]="validatePasswords()"
+                class="alert alert-danger">
 
-                <div *ngIf="registrationForm.controls.passwordRepeatReg.errors?.maxlength">
-                    Slaptažodis privalo būti trumpesnis nei 30 symbolių
-                </div>
                 <div *ngIf="this.passwordReg.value != this.passwordRepeatReg.value">
                     Slaptažodžiai turi sutapti
                 </div>
@@ -296,8 +286,7 @@
             <span class="align-bottom mt-4">
                 <p>{{ this.serverErrorMessage }}</p>
                 <mat-hint>Registruotis galėsit užpildę visus laukus</mat-hint>
-                <button
-                    
+                <button         
                     hintLabel="Max 10 characters"
                     mat-stroked-button
                     color="primary"
