validation bug fixed

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -34,7 +34,7 @@
           <ul>
             <li>Sieki su IT susijusio išsilavinimo ar mėgini praktiškai atrasti save šioje srityje;</li>
             <li>Ateityje nori būti įvairiapusis IT specialistas, kuris sugeba ne tik programuoti;</li>
-            <li>Degi noru tobulėti, rodai iniciatyvą ir jau turi bazinius gebėjimu;</li>
+            <li>Degi noru tobulėti, rodai iniciatyvą ir jau turi bazinius gebėjimus;</li>
             <li>Skirsi pusę darbo dienos (14-18 val.) teorinėms ir praktinėms užduotims;</li>
             <li>Puikiai kalbi ir rašai angliškai.</li>
           </ul>
