adding comments to detailed view with mock data

--- a/src/app/admin-application-details/admin-application-details.component.html
+++ b/src/app/admin-application-details/admin-application-details.component.html
@@ -9,5 +9,11 @@
     </mat-radio-group>
     <button>Išsaugoti būseną</button>
   </div>
+  <div id="admin-comments">
+    <div id="admin-comments-header">Comments</div>
+    <app-admin-comment></app-admin-comment>
+    <app-admin-comment></app-admin-comment>
+    <app-admin-comment></app-admin-comment>
+  </div>
 </div>
 
