--- a/src/app/admin-application-details/admin-application-details.component.scss
+++ b/src/app/admin-application-details/admin-application-details.component.scss
@@ -14,6 +14,17 @@
   flex-direction: column;
 }
 
+#admin-comments{
+  padding: .375rem .75rem;
+}
+
+#admin-comments-header{
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: .75rem;
+  margin-top: 1rem;
+}
+
 #admin-action-container button{
   background: #6486C4;
   height: 40px;
