--- a/src/app/application-details/application-details.component.scss
+++ b/src/app/application-details/application-details.component.scss
@@ -2,17 +2,21 @@
   width: 100%;
   text-align: center;
   font-size: 30px;
-  padding: 10px;
-  padding-top: 20px
+  padding: 30px 10px;
 }
 #application-details-wrapper{
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
   background: white;
 }
+.application-details-header{
+  font-size: 14px;
+  color: grey;
+}
 .application-detail-container{
   padding: .375rem .75rem;
 }
 .application-details-content{
-  color: #a6a6a6;
+  margin-left: 1rem;
+  word-wrap: break-word;
 }
