improved information flow for application

--- a/src/app/admin-application-details/admin-application-details.component.html
+++ b/src/app/admin-application-details/admin-application-details.component.html
@@ -1,5 +1,5 @@
 <div id="admin-application-details-wrapper">
-  <app-application-details></app-application-details>
+  <app-application-details [application]="application$ | async"></app-application-details>
   <div id="admin-action-container">
     <div class="admin-action-header">Aplikacijos būsena</div>
     <mat-radio-group aria-label="Select an option">
