--- a/src/app/application-details/application-details.component.html
+++ b/src/app/application-details/application-details.component.html
@@ -1,4 +1,4 @@
-<div id="application-details-wrapper" *ngIf="application$ | async as application">
+<div id="application-details-wrapper" *ngIf="application">
   <div class="application-header">Paraiška {{application.id}}</div>
   <div class="application-detail-container">
     <div class="application-details-header">Vardas ir pavardė</div>
