--- a/src/app/admin-application-details/admin-application-details.component.scss
+++ b/src/app/admin-application-details/admin-application-details.component.scss
@@ -5,6 +5,9 @@
   padding-bottom: 2.5vh;
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(110,110,110,0.75);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(110,110,110,0.75);
+  box-shadow: 0px 0px 15px 0px rgba(110,110,110,0.75);
 }
 
 #admin-action-container{
