--- a/src/app/application-details/application-details.component.html
+++ b/src/app/application-details/application-details.component.html
@@ -2,7 +2,7 @@
   <div class="application-header">Paraiška {{application.id}}</div>
   <div class="application-detail-container">
     <div class="application-details-header">Vardas ir pavardė</div>
-    <div class="application-details-content">{{application.name}}</div>
+    <div class="application-details-content">{{application.fullName}}</div>
   </div>
   <div class="application-detail-container">
     <div class="application-details-header">El. paštas</div>
@@ -10,7 +10,7 @@
   </div>
   <div class="application-detail-container">
     <div class="application-details-header">Telefono numeris</div>
-    <div class="application-details-content">{{application.phone_number}}</div>
+    <div class="application-details-content">{{application.phoneNumber}}</div>
   </div>
   <div class="application-detail-container">
     <div class="application-details-header">Mokymosi įstaiga</div>
@@ -18,7 +18,7 @@
   </div>
   <div class="application-detail-container">
     <div class="application-details-header">Pomėgiai</div>
-    <div class="application-details-content">{{application.free_time}}</div>
+    <div class="application-details-content">{{application.hobbies}}</div>
   </div>
   <div class="application-detail-container form-group">
     <div class="application-details-header">Galimybė pasirašyti sutartį</div>
@@ -42,6 +42,6 @@
   </div>
   <div class="application-detail-container form-group">
     <div class="application-details-header">Užpildymo data</div>
-    <div class="application-details-content">{{application.application_date}}</div>
+    <div class="application-details-content">{{application.applicationDate}}</div>
   </div>
 </div>
