fixing CORS issues and getting application data from backend

--- a/src/app/application-details/application-details.component.html
+++ b/src/app/application-details/application-details.component.html
@@ -20,27 +20,27 @@
     <div class="application-details-header">Pomėgiai</div>
     <div class="application-details-content">{{application.hobbies}}</div>
   </div>
-  <div class="application-detail-container form-group">
+  <div class="application-detail-container">
     <div class="application-details-header">Galimybė pasirašyti sutartį</div>
     <div class="application-details-content">{{application.agreement ? "Taip (" + application.comment + ")":"Ne (" + application.comment + ")"}}</div>
   </div>
-  <div class="application-detail-container form-group">
+  <div class="application-detail-container">
     <div class="application-details-header">Galimybė ateiti akademijos laiku (14-18 val. darbo dienomis)</div>
     <div class="application-details-content">{{application.academy_time ? "Taip":"Ne"}}</div>
   </div>
-  <div class="application-detail-container form-group">
+  <div class="application-detail-container">
     <div class="application-details-header">Ėjimo į akademiją priežastis</div>
     <div class="application-details-content">{{application.reason}}</div>
   </div>
-  <div class="application-detail-container form-group">
+  <div class="application-detail-container">
     <div class="application-details-header">Patinkančios technologijos</div>
     <div class="application-details-content">{{application.technologies}}</div>
   </div>
-  <div class="application-detail-container form-group">
+  <div class="application-detail-container">
     <div class="application-details-header">Iš kur sužinota apie akademiją</div>
     <div class="application-details-content">{{application.source}}</div>
   </div>
-  <div class="application-detail-container form-group">
+  <div class="application-detail-container">
     <div class="application-details-header">Užpildymo data</div>
     <div class="application-details-content">{{application.applicationDate}}</div>
   </div>
