--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -2,7 +2,15 @@
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
-
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header>Statusas</th>
+            <td mat-cell *matCellDef="let element">
+                <div *ngIf="element.status === 'accepted'" class=" p-1 status-passed">Patvirtinta</div>
+                <div *ngIf="element.status === 'declined'" class=" p-1 status-declined">Atmesta</div>
+                <i *ngIf="element.status==='new'" class="fas fa-eye-slash not-seen-style">aaaa</i>
+                <i *ngIf="element.status==='seen'" class="fas fa-eye seen-style">bbbb</i>
+            </td>
+        </ng-container>
         <!-- Position Column -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Vardas Pavardė</th>
@@ -22,30 +30,17 @@
         </ng-container>
 
         <!-- Symbol Column -->
-        <ng-container matColumnDef="seen">
-            <th mat-header-cell *matHeaderCellDef>Peržiūrėta</th>
-            <td mat-cell *matCellDef="let element">
-                <i *ngIf="!element.seen" class="fas fa-eye-slash not-seen-style"></i>
-                <i *ngIf="element.seen" class="fas fa-eye seen-style"></i>
-            </td>
-        </ng-container>
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Statusas</th>
-            <td mat-cell *matCellDef="let element">
-                <div *ngIf="element.status === 'accepted'" class=" p-1 status-passed">Patvirtinta</div>
-                <div *ngIf="element.status === 'declined'" class=" p-1 status-declined">Atmesta</div>
-                <div *ngIf="element.status === 'possible'" class=" p-1 status-possible">Potenciali</div>
-                <div *ngIf="element.status === ''" class=" p-1 status-null">Nenustatyta</div>
-            </td>
-        </ng-container>
-        <ng-container matColumnDef='action'>
+
+
+        <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Daugiau</th>
-             <td mat-cell *matCellDef="let element">
+            <td mat-cell *matCellDef="let element">
                 <mat-icon>launch</mat-icon>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+
     <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
 </div>
